# personal_server_management_tool

./: .gitignore  README.md
psmt/: Cargo.toml
psmt-backend/psmt_firewall_manager/: Cargo.toml
psmt-backend/psmt_web/src/: lib.rs
psmt-client/: index.html  package-lock.json  package.json
psmt-client/src/: index.css  main.jsx
psmt-client/src/components/: docker_page.jsx  firewall_page.jsx  (+5 more)
psmt/app/: Cargo.toml
psmt/lib/psmt-docker-manager/: Cargo.toml
psmt/lib/psmt-firewall-manager/: Cargo.toml
psmt/lib/psmt-system-services/: Cargo.toml
psmt/lib/psmt-ui/: Cargo.toml  askama.toml
psmt/lib/psmt-ui/src/: main.rs
psmt/lib/psmt-ui/src/config/: system_config.rs
psmt/lib/psmt-ui/src/server/: server.rs
psmt/lib/psmt-ui/src/server/routes/: mod.rs
psmt/lib/psmt-ui/src/server/routes/get_routes/: landing_dashboard.rs
psmt/lib/psmt-ui/src/views/templates/: boiler.html
psmt/psmt_app/src/: main.rs
psmt/psmt_docker_manager/: Cargo.toml
psmt/psmt_jenkins_manager/: Cargo.toml
psmt/psmt_system_services/: Cargo.toml
psmt/psmt_web/: Cargo.toml
psmt/psmt_web/src/controllers/: get_controller.rs
psmt/psmt_web/src/server/: server.rs
psmt/psmt_web/src/server/routes/get_routes/: dashboard_projects.rs  mod.rs
psmt/psmt_web/src/views/: mod.rs
psmt/psmt_web/src/views/templates/: boiler.html  global.css
psmt/psmt_web/src/views/templates/landing_dashboard/: landing_dashboard.html
psmt/psmt_web/src/views/templates/web_app/: web_app_layout.js
psmt/psmt_web/src/views/templates/web_app/dashboard_projects/: dashboard_projects.html
psmt/src/: main.rs
(+11 files in other folders)
