workspace = { 
    members = [ 
        "lib/psmt-docker-manager",
        "lib/psmt-firewall-manager",
        "lib/psmt-system-manager",
        "lib/psmt-ui"
    ] 
}

[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
