[package]
name = "psmt_web"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.6"
actix-web = "4.8.0"
anyhow = "1.0.86"
askama = "0.12.1"
dotenv = "0.15.0"
env_logger = "0.11.4"
log = "0.4.22"
reqwest = "0.12.5"
tokio = { version = "1.39.1", features = ["full"] }

