[package]
name = "psmt-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.8.0"
anyhow = "1.0.86"
askama = "0.12.1"
dotenv = "0.15.0"
env_logger = "0.11.4"
log = "0.4.22"
reqwest = "0.12.5"

